--- a/styles.css
+++ b/styles.css
@@ -40,14 +40,16 @@
 
 .hoverable {
   margin-top: 4px;
+  cursor: crosshair;
 }
 
 .display-frame {
   position: fixed;
-  bottom: 0;
-  right: 0;
+  border-radius: 1em;
+  top: 25px;
+  left: 12px;
   height: 250px;
-  width: 250px;
+  width: 375px;
   border: 2px solid black;
   background-color: blue;
   opacity: 0;
