--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@
   height: 250px;
   width: 375px;
   border: 2px solid black;
-  background-color: blue;
+  background-color: red;
   opacity: 0;
 
 }
