--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@
 }
 
 #site-2 {
-  height: 10px;
+  height: 110px;
   width:  27px;
   position: absolute;
   top: 515px;
@@ -36,7 +36,22 @@
 }
 
 #site-2:hover .display-frame {
-  background-image: url("");
+  background-image: url("https://media.roverpass.com/pictures/images/000/025/749/medium/pleasant-acres-farm-campground-sussex-nj-2.png?1487435116");
+  background-size: cover;
+  opacity: 1;
+  z-index: 2;
+}
+
+#site-518 {
+  height: 27px;
+  width:  27px;
+  position: absolute;
+  top: 630px;
+  left: 330px;
+}
+
+#site-518:hover .display-frame {
+  background-image: url("http://www.pleasantacres.com/wp-content/uploads/2015/08/cottage.jpg");
   background-size: cover;
   opacity: 1;
   z-index: 2;
